# EssaREST

./: CMakeLists.txt  README.md  main.cpp
src/rest/: AbstractClientRequest.hpp  AbstractServerMethod.hpp  AbstractServerResponse.hpp  Defines.hpp  HttpClientRequest.cpp  HttpClientRequest.hpp  HttpResponse.hpp  HttpServerMethod.cpp  HttpServerMethod.hpp  HttpServerResponse.cpp  HttpServerResponse.hpp
src/server/: BasicServer.cpp  BasicServer.hpp  HttpServer.cpp  HttpServer.hpp
src/utils/: HtmlBuilder.hpp  Json.hpp
